feat: add model x and update body bg color

--- a/index.html
+++ b/index.html
@@ -149,5 +149,49 @@
         </div>
       </div>
     </div>
+
+    <!-- model x -->
+    <div
+      class="background"
+      style="
+        --bgi: url(../image/background/model-x-mobile.jpg);
+        --bgid: url(../image/background/model-x.jpg);
+      "
+    >
+      <div class="panel">
+        <h1 class="title">Model x</h1>
+        <p class="text">Order Online for</p>
+        <a
+          class="link"
+          href="#model-x"
+          title="Order Online for Touchless Delivery"
+        >
+          Touchless Delivery
+        </a>
+      </div>
+
+      <div class="box__gap--large">
+        <div class="box__gap--small">
+          <button class="button--dark">Custom order</button>
+
+          <button class="button--light">Existing inventory</button>
+        </div>
+
+        <div class="button__icon--down">
+          <svg
+            width="48"
+            height="48"
+            viewBox="0 0 48 48"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g>
+              <path
+                d="M36.5 20.25L32 15.75L24.5 23.25L17 15.75L12.5 20.25L24.5 32.25L36.5 20.25Z"
+              />
+            </g>
+          </svg>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
