--- a/index.html
+++ b/index.html
@@ -231,5 +231,43 @@
         </div>
       </div>
     </div>
+
+    <!-- solar roof -->
+    <div
+      class="background"
+      style="
+        --bgi: url(../image/background/solar-roof-mobile.jpg);
+        --bgid: url(../image/background/solar-roof.jpg);
+      "
+    >
+      <div class="panel">
+        <h1 class="title">Solar roof</h1>
+
+        <p class="text">Produce Clean Energy From Your Roof</p>
+      </div>
+
+      <div class="box__gap--large">
+        <div class="box__gap--small">
+          <button class="button--dark">Order now</button>
+
+          <button class="button--light">Learn more</button>
+        </div>
+
+        <div class="button__icon--down">
+          <svg
+            width="48"
+            height="48"
+            viewBox="0 0 48 48"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g>
+              <path
+                d="M36.5 20.25L32 15.75L24.5 23.25L17 15.75L12.5 20.25L24.5 32.25L36.5 20.25Z"
+              />
+            </g>
+          </svg>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
