--- a/index.html
+++ b/index.html
@@ -269,5 +269,39 @@
         </div>
       </div>
     </div>
+
+    <!-- Accessories -->
+    <div
+      class="background"
+      style="
+        --bgi: url(../image/background/accessories-mobile.jpg);
+        --bgid: url(../image/background/accessories.jpg);
+      "
+    >
+      <div class="panel">
+        <h1 class="title">Accessories</h1>
+      </div>
+
+      <div class="box__gap--large">
+        <div class="box__gap--small">
+          <button class="button--dark">Shop now</button>
+        </div>
+
+        <div class="button__icon--up">
+          <svg
+            width="48"
+            height="48"
+            viewBox="0 0 48 48"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g>
+              <path
+                d="M36.5 20.25L32 15.75L24.5 23.25L17 15.75L12.5 20.25L24.5 32.25L36.5 20.25Z"
+              />
+            </g>
+          </svg>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
