--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <body>
     <!-- model trei -->
     <div
+      id="model-3"
       class="background"
       style="
         --bgi: url(../image/background/model-3-mobile.jpg);
@@ -45,7 +46,7 @@
           <button class="button--light">Existing inventory</button>
         </div>
 
-        <div class="button__icon--down">
+        <a class="button__icon--down" href="#model-y">
           <svg
             width="48"
             height="48"
@@ -58,12 +59,13 @@
               />
             </g>
           </svg>
-        </div>
+        </a>
       </div>
     </div>
 
     <!-- model y -->
     <div
+      id="model-y"
       class="background"
       style="
         --bgi: url(../image/background/model-y-mobile.jpg);
@@ -89,7 +91,7 @@
           <button class="button--light">Existing inventory</button>
         </div>
 
-        <div class="button__icon--down">
+        <a class="button__icon--down" href="#model-s">
           <svg
             width="48"
             height="48"
@@ -102,12 +104,13 @@
               />
             </g>
           </svg>
-        </div>
+        </a>
       </div>
     </div>
 
     <!-- model s -->
     <div
+      id="model-s"
       class="background"
       style="
         --bgi: url(../image/background/model-s-mobile.jpg);
@@ -133,7 +136,7 @@
           <button class="button--light">Existing inventory</button>
         </div>
 
-        <div class="button__icon--down">
+        <a class="button__icon--down" href="#model-x">
           <svg
             width="48"
             height="48"
@@ -146,12 +149,13 @@
               />
             </g>
           </svg>
-        </div>
+        </a>
       </div>
     </div>
 
     <!-- model x -->
     <div
+      id="model-x"
       class="background"
       style="
         --bgi: url(../image/background/model-x-mobile.jpg);
@@ -177,7 +181,7 @@
           <button class="button--light">Existing inventory</button>
         </div>
 
-        <div class="button__icon--down">
+        <a class="button__icon--down" href="#solar-panels">
           <svg
             width="48"
             height="48"
@@ -190,12 +194,13 @@
               />
             </g>
           </svg>
-        </div>
+        </a>
       </div>
     </div>
 
     <!-- solar panels -->
     <div
+      id="solar-panels"
       class="background"
       style="
         --bgi: url(../image/background/solar-panels-mobile.jpg);
@@ -215,7 +220,7 @@
           <button class="button--light">Learn more</button>
         </div>
 
-        <div class="button__icon--down">
+        <a class="button__icon--down" href="#solar-roof">
           <svg
             width="48"
             height="48"
@@ -228,12 +233,13 @@
               />
             </g>
           </svg>
-        </div>
+        </a>
       </div>
     </div>
 
     <!-- solar roof -->
     <div
+      id="solar-roof"
       class="background"
       style="
         --bgi: url(../image/background/solar-roof-mobile.jpg);
@@ -253,7 +259,7 @@
           <button class="button--light">Learn more</button>
         </div>
 
-        <div class="button__icon--down">
+        <a class="button__icon--down" href="#accessories">
           <svg
             width="48"
             height="48"
@@ -266,12 +272,13 @@
               />
             </g>
           </svg>
-        </div>
+        </a>
       </div>
     </div>
 
     <!-- Accessories -->
     <div
+      id="accessories"
       class="background"
       style="
         --bgi: url(../image/background/accessories-mobile.jpg);
@@ -287,7 +294,7 @@
           <button class="button--dark">Shop now</button>
         </div>
 
-        <div class="button__icon--up">
+        <a class="button__icon--up" href="#model-3">
           <svg
             width="48"
             height="48"
@@ -300,7 +307,7 @@
               />
             </g>
           </svg>
-        </div>
+        </a>
       </div>
     </div>
   </body>
