--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-Hello There
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tesla Website UI</title>
+    <meta
+      name="description"
+      content="How to quickly build the UI for Tesla Motors."
+    />
+
+    <link rel="stylesheet" href="/smart-look/general.css" />
+    <link rel="stylesheet" href="/smart-look/background.css" />
+    <link rel="stylesheet" href="/smart-look/button.css" />
+    <link rel="stylesheet" href="/smart-look/text.css" />
+    <link rel="stylesheet" href="/smart-look/panel.css" />
+  </head>
+  <body>
+    <!-- content -->
+    <!-- model trei -->
+    <div
+      class="background"
+      style="
+        --bgi: url(../image/background/model-3-mobile.jpg);
+        --bgid: url(../image/background/model-3.jpg);
+      "
+    >
+      <div class="panel">
+        <h1 class="title">Model 3</h1>
+        <p class="text">Order Online for</p>
+        <a
+          class="link"
+          href="#model-3"
+          title="Order Online for Touchless Delivery"
+        >
+          Touchless Delivery
+        </a>
+      </div>
+
+      <div class="box__gap--large">
+        <div class="box__gap--small">
+          <button class="button--dark">Custom order</button>
+
+          <button class="button--light">Existing inventory</button>
+        </div>
+
+        <div class="button__icon--down">
+          <svg
+            width="48"
+            height="48"
+            viewBox="0 0 48 48"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g>
+              <path
+                d="M36.5 20.25L32 15.75L24.5 23.25L17 15.75L12.5 20.25L24.5 32.25L36.5 20.25Z"
+              />
+            </g>
+          </svg>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
