--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       name="description"
       content="How to quickly build the UI for Tesla Motors."
     />
-
     <link rel="stylesheet" href="/smart-look/general.css" />
     <link rel="stylesheet" href="/smart-look/background.css" />
     <link rel="stylesheet" href="/smart-look/button.css" />
@@ -17,7 +16,6 @@
     <link rel="stylesheet" href="/smart-look/panel.css" />
   </head>
   <body>
-    <!-- content -->
     <!-- model trei -->
     <div
       class="background"
@@ -37,15 +35,232 @@
           Touchless Delivery
         </a>
       </div>
-
       <div class="box__gap--large">
         <div class="box__gap--small">
           <button class="button--dark">Custom order</button>
-
           <button class="button--light">Existing inventory</button>
         </div>
-
         <div class="button__icon--down">
+          <svg
+            width="48"
+            height="48"
+            viewBox="0 0 48 48"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g>
+              <path
+                d="M36.5 20.25L32 15.75L24.5 23.25L17 15.75L12.5 20.25L24.5 32.25L36.5 20.25Z"
+              />
+            </g>
+          </svg>
+        </div>
+      </div>
+    </div>
+    <!-- model y -->
+    <div
+      class="background"
+      style="
+        --bgi: url(../image/background/model-y-mobile.jpg);
+        --bgid: url(../image/background/model-y.jpg);
+      "
+    >
+      <div class="panel">
+        <h1 class="title">Model y</h1>
+        <p class="text">Order Online for</p>
+        <a
+          class="link"
+          href="#model-y"
+          title="Order Online for Touchless Delivery"
+        >
+          Touchless Delivery
+        </a>
+      </div>
+      <div class="box__gap--large">
+        <div class="box__gap--small">
+          <button class="button--dark">Custom order</button>
+          <button class="button--light">Existing inventory</button>
+        </div>
+        <div class="button__icon--down">
+          <svg
+            width="48"
+            height="48"
+            viewBox="0 0 48 48"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g>
+              <path
+                d="M36.5 20.25L32 15.75L24.5 23.25L17 15.75L12.5 20.25L24.5 32.25L36.5 20.25Z"
+              />
+            </g>
+          </svg>
+        </div>
+      </div>
+    </div>
+    <!-- model s -->
+    <div
+      class="background"
+      style="
+        --bgi: url(../image/background/model-s-mobile.jpg);
+        --bgid: url(../image/background/model-s.jpg);
+      "
+    >
+      <div class="panel">
+        <h1 class="title">Model s</h1>
+        <p class="text">Order Online for</p>
+        <a
+          class="link"
+          href="#model-s"
+          title="Order Online for Touchless Delivery"
+        >
+          Touchless Delivery
+        </a>
+      </div>
+      <div class="box__gap--large">
+        <div class="box__gap--small">
+          <button class="button--dark">Custom order</button>
+          <button class="button--light">Existing inventory</button>
+        </div>
+        <div class="button__icon--down">
+          <svg
+            width="48"
+            height="48"
+            viewBox="0 0 48 48"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g>
+              <path
+                d="M36.5 20.25L32 15.75L24.5 23.25L17 15.75L12.5 20.25L24.5 32.25L36.5 20.25Z"
+              />
+            </g>
+          </svg>
+        </div>
+      </div>
+    </div>
+    <!-- model x -->
+    <div
+      class="background"
+      style="
+        --bgi: url(../image/background/model-x-mobile.jpg);
+        --bgid: url(../image/background/model-x.jpg);
+      "
+    >
+      <div class="panel">
+        <h1 class="title">Model x</h1>
+        <p class="text">Order Online for</p>
+        <a
+          class="link"
+          href="#model-x"
+          title="Order Online for Touchless Delivery"
+        >
+          Touchless Delivery
+        </a>
+      </div>
+      <div class="box__gap--large">
+        <div class="box__gap--small">
+          <button class="button--dark">Custom order</button>
+          <button class="button--light">Existing inventory</button>
+        </div>
+        <div class="button__icon--down">
+          <svg
+            width="48"
+            height="48"
+            viewBox="0 0 48 48"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g>
+              <path
+                d="M36.5 20.25L32 15.75L24.5 23.25L17 15.75L12.5 20.25L24.5 32.25L36.5 20.25Z"
+              />
+            </g>
+          </svg>
+        </div>
+      </div>
+    </div>
+    <!-- solar panels -->
+    <div
+      class="background"
+      style="
+        --bgi: url(../image/background/solar-panels-mobile.jpg);
+        --bgid: url(../image/background/solar-panels.jpg);
+      "
+    >
+      <div class="panel">
+        <h1 class="title">Solar panels</h1>
+        <p class="text">Lowest Cost Solar Panels in America</p>
+      </div>
+      <div class="box__gap--large">
+        <div class="box__gap--small">
+          <button class="button--dark">Order now</button>
+          <button class="button--light">Learn more</button>
+        </div>
+        <div class="button__icon--down">
+          <svg
+            width="48"
+            height="48"
+            viewBox="0 0 48 48"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g>
+              <path
+                d="M36.5 20.25L32 15.75L24.5 23.25L17 15.75L12.5 20.25L24.5 32.25L36.5 20.25Z"
+              />
+            </g>
+          </svg>
+        </div>
+      </div>
+    </div>
+    <!-- solar roof -->
+    <div
+      class="background"
+      style="
+        --bgi: url(../image/background/solar-roof-mobile.jpg);
+        --bgid: url(../image/background/solar-roof.jpg);
+      "
+    >
+      <div class="panel">
+        <h1 class="title">Solar roof</h1>
+        <p class="text">Produce Clean Energy From Your Roof</p>
+      </div>
+      <div class="box__gap--large">
+        <div class="box__gap--small">
+          <button class="button--dark">Order now</button>
+          <button class="button--light">Learn more</button>
+        </div>
+        <div class="button__icon--down">
+          <svg
+            width="48"
+            height="48"
+            viewBox="0 0 48 48"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g>
+              <path
+                d="M36.5 20.25L32 15.75L24.5 23.25L17 15.75L12.5 20.25L24.5 32.25L36.5 20.25Z"
+              />
+            </g>
+          </svg>
+        </div>
+      </div>
+    </div>
+
+    <!-- Accessories -->
+    <div
+      class="background"
+      style="
+        --bgi: url(../image/background/accessories-mobile.jpg);
+        --bgid: url(../image/background/accessories.jpg);
+      "
+    >
+      <div class="panel">
+        <h1 class="title">Accessories</h1>
+      </div>
+
+      <div class="box__gap--large">
+        <div class="box__gap--small">
+          <button class="button--dark">Shop now</button>
+        </div>
+
+        <div class="button__icon--up">
           <svg
             width="48"
             height="48"
