reverted back to prev commit from Marian

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Tesla Website UI</title>
-    <meta
+    <metas
       name="description"
       content="How to quickly build the UI for Tesla Motors."
     />
+
     <link rel="stylesheet" href="/smart-look/general.css" />
     <link rel="stylesheet" href="/smart-look/background.css" />
     <link rel="stylesheet" href="/smart-look/button.css" />
@@ -18,6 +20,7 @@
   <body>
     <!-- model trei -->
     <div
+      id="model-3"
       class="background"
       style="
         --bgi: url(../image/background/model-3-mobile.jpg);
@@ -35,12 +38,15 @@
           Touchless Delivery
         </a>
       </div>
+
       <div class="box__gap--large">
         <div class="box__gap--small">
           <button class="button--dark">Custom order</button>
+
           <button class="button--light">Existing inventory</button>
         </div>
-        <div class="button__icon--down">
+
+        <a class="button__icon--down" href="#model-y">
           <svg
             width="48"
             height="48"
@@ -53,11 +59,13 @@
               />
             </g>
           </svg>
-        </div>
+        </a>
       </div>
     </div>
+
     <!-- model y -->
     <div
+      id="model-y"
       class="background"
       style="
         --bgi: url(../image/background/model-y-mobile.jpg);
@@ -75,12 +83,15 @@
           Touchless Delivery
         </a>
       </div>
+
       <div class="box__gap--large">
         <div class="box__gap--small">
           <button class="button--dark">Custom order</button>
+
           <button class="button--light">Existing inventory</button>
         </div>
-        <div class="button__icon--down">
+
+        <a class="button__icon--down" href="#model-s">
           <svg
             width="48"
             height="48"
@@ -93,11 +104,13 @@
               />
             </g>
           </svg>
-        </div>
+        </a>
       </div>
     </div>
+
     <!-- model s -->
     <div
+      id="model-s"
       class="background"
       style="
         --bgi: url(../image/background/model-s-mobile.jpg);
@@ -115,12 +128,15 @@
           Touchless Delivery
         </a>
       </div>
+
       <div class="box__gap--large">
         <div class="box__gap--small">
           <button class="button--dark">Custom order</button>
+
           <button class="button--light">Existing inventory</button>
         </div>
-        <div class="button__icon--down">
+
+        <a class="button__icon--down" href="#model-x">
           <svg
             width="48"
             height="48"
@@ -133,11 +149,13 @@
               />
             </g>
           </svg>
-        </div>
+        </a>
       </div>
     </div>
+
     <!-- model x -->
     <div
+      id="model-x"
       class="background"
       style="
         --bgi: url(../image/background/model-x-mobile.jpg);
@@ -155,12 +173,15 @@
           Touchless Delivery
         </a>
       </div>
+
       <div class="box__gap--large">
         <div class="box__gap--small">
           <button class="button--dark">Custom order</button>
+
           <button class="button--light">Existing inventory</button>
         </div>
-        <div class="button__icon--down">
+
+        <a class="button__icon--down" href="#solar-panels">
           <svg
             width="48"
             height="48"
@@ -173,11 +194,13 @@
               />
             </g>
           </svg>
-        </div>
+        </a>
       </div>
     </div>
+
     <!-- solar panels -->
     <div
+      id="solar-panels"
       class="background"
       style="
         --bgi: url(../image/background/solar-panels-mobile.jpg);
@@ -186,14 +209,18 @@
     >
       <div class="panel">
         <h1 class="title">Solar panels</h1>
+
         <p class="text">Lowest Cost Solar Panels in America</p>
       </div>
+
       <div class="box__gap--large">
         <div class="box__gap--small">
           <button class="button--dark">Order now</button>
+
           <button class="button--light">Learn more</button>
         </div>
-        <div class="button__icon--down">
+
+        <a class="button__icon--down" href="#solar-roof">
           <svg
             width="48"
             height="48"
@@ -206,11 +233,13 @@
               />
             </g>
           </svg>
-        </div>
+        </a>
       </div>
     </div>
+
     <!-- solar roof -->
     <div
+      id="solar-roof"
       class="background"
       style="
         --bgi: url(../image/background/solar-roof-mobile.jpg);
@@ -219,14 +248,18 @@
     >
       <div class="panel">
         <h1 class="title">Solar roof</h1>
+
         <p class="text">Produce Clean Energy From Your Roof</p>
       </div>
+
       <div class="box__gap--large">
         <div class="box__gap--small">
           <button class="button--dark">Order now</button>
+
           <button class="button--light">Learn more</button>
         </div>
-        <div class="button__icon--down">
+
+        <a class="button__icon--down" href="#accessories">
           <svg
             width="48"
             height="48"
@@ -239,12 +272,13 @@
               />
             </g>
           </svg>
-        </div>
+        </a>
       </div>
     </div>
 
     <!-- Accessories -->
     <div
+      id="accessories"
       class="background"
       style="
         --bgi: url(../image/background/accessories-mobile.jpg);
@@ -260,7 +294,7 @@
           <button class="button--dark">Shop now</button>
         </div>
 
-        <div class="button__icon--up">
+        <a class="button__icon--up" href="#model-3">
           <svg
             width="48"
             height="48"
@@ -273,7 +307,7 @@
               />
             </g>
           </svg>
-        </div>
+        </a>
       </div>
     </div>
   </body>
